--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,17 @@
       <version>2.24.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.3</version>
+    </dependency>
 
   </dependencies>
 
